[package]
name = "cardamom-chai"
version = "0.1.0"
edition = "2024"

[dependencies]
chai-tea = { path = "../chai-tea" }
dirs = "6.0.0"
eframe = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
